--- a/res/layout/activity_items_list.xml
+++ b/res/layout/activity_items_list.xml
@@ -7,8 +7,8 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" >
     </ListView>
 
