Created a new activity that will display a list of all lectures. Changed manifest to point to this activity as the default one.
This will let us implement easy master-detail ui. We will add the event
hierarchy in landscape mode, showing how powerfull fragments are!

--- a/res/layout/lecture_list_item.xml
+++ b/res/layout/lecture_list_item.xml
@@ -8,9 +8,12 @@
         android:id="@+id/lecture_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
         android:fontFamily="san-serif-light"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/ListItemTitle" />
+        android:textColor="@color/ListItemTitle" 
+        />
 
     <TextView
         android:id="@+id/lecture_description"
@@ -24,5 +27,4 @@
         android:maxLines="4"
         android:ellipsize="end"
         />
-
 </RelativeLayout>
