--- a/res/layout/single_list_activity.xml
+++ b/res/layout/single_list_activity.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".EventsListActivity" >
 
     <ListView
-        android:id="@+id/events_list"
+        android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:cacheColorHint="#000000"
