--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -6,15 +6,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".EventsListActivity" >
 
-    <ListView
-        android:id="@+id/list"
+    <fragment 
+        android:name="com.gdg.andconlab.ui.LecturesListFragment"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:cacheColorHint="#000000"
-        android:divider="@color/divider_color"
-        android:dividerHeight="1dp"
-        tools:listitem="@layout/event_list_item" >
-
-    </ListView>
+        android:id="@+id/lectures_fragment"
+        />
 
 </RelativeLayout>
