--- a/res/layout/single_lecture.xml
+++ b/res/layout/single_lecture.xml
@@ -1,45 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/lecture_container"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        >
-
-        <TextView
-            android:id="@+id/lecture_name"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="Lecture Name"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#000000" />
+        android:padding="@dimen/lecture_item_margin">
 
         <TextView
             android:id="@+id/lecture_description"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="asdf asdfasdf  asdf asdf asdf;kljhasd f asdf;kljasd f asdf a;sdklfj as;dklfj asd;kfj  asdjf;klas dfas"
-            android:textColor="@color/ListItemSubTitle"
-            android:textSize="@dimen/sub_title_size" />
+            android:layout_marginBottom="@dimen/lecture_item_margin"
+            android:textColor="@color/ListItemTitle"
+            android:textSize="@dimen/sub_title_size"/>
 
-<!--         <com.pagesuite.flowtext.FlowTextView
-            android:id="@+id/lecture_description"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+        <LinearLayout
+            android:id="@+id/lecture_btns_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/lecture_item_margin"
+            android:visibility="gone">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:padding="10dip"
-                android:src="@drawable/andconlablauncher" />
-        </com.pagesuite.flowtext.FlowTextView> -->
+            <Button
+                android:id="@+id/lecture_btn_slides"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/lecture_btn_height"
+                android:text="@string/slides"
+                android:visibility="gone"/>
+
+            <Button
+                android:id="@+id/lecture_btn_video"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/lecture_btn_height"
+                android:text="@string/video"
+                android:visibility="gone"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
