--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -7,4 +6,16 @@
     <dimen name="list_item_horizontal_margin">16dp</dimen>
     <dimen name="sub_title_size">16dp</dimen>
     <dimen name="list_item_padding_bottom">5dp</dimen>
+
+    <dimen name="event_list_item_image_width">48dp</dimen>
+    <dimen name="event_list_item_image_height">48dp</dimen>
+
+    <dimen name="speaker_image_width">128dp</dimen>
+    <dimen name="speaker_image_height">128dp</dimen>
+
+    <dimen name="speaker_image_padding">7dp</dimen>
+    <dimen name="speaker_bottom_margin">10dp</dimen>
+
+    <dimen name="lecture_btn_height">50dp</dimen>
+    <dimen name="lecture_item_margin">10dp</dimen>
 </resources>
